--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -24,7 +24,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 60px;
+  height: 100vh;
+  position: relative;
 }
 .main .icon {
   width: 34px;
@@ -41,6 +42,9 @@
   display: flex;
   flex-direction: column;
   width: 320px;
+  position: absolute;
+  bottom: 20px;
+  max-height: 200px;
 }
 .main textarea[type="text"] {
   padding: 12px 16px;
@@ -64,18 +68,22 @@
 }
 .main .result {
   font-weight: bold;
-  
+  padding-top: 10px;
 }
 .main .qa {
-  margin-bottom: 40px;
-  height: 500px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  height: calc(100vh - 280px);
   overflow-y: auto;
+  width: 95%;
+  border: 1px solid #10a37f;
+  border-radius: 4px;
 }
 .main .human, .main .ai {
   display: flex;
-  margin-top: 40px;
-  align-items: center;
-  width: 350px;
+  /* align-items: center; */
+  width: 95%;
+  margin: 20px auto;
 }
 
 .main .human {
@@ -87,4 +95,17 @@
 }
 .main .ai .icon{
   padding-right: 10px;
+}
+.main .inputBox {
+  display: flex;
+}
+.main .clear {
+  padding: 6px 0;
+  color: #fff;
+  background-color: #a3104b;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+  width: 120px;
 }
